<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <DropDownPreference
        app:key="@string/settings_key_server_type"
        app:title="@string/settings_server_type_title"
        app:summary="@string/settings_server_type_description"
        app:entries="@array/settings_server_type_value_list"
        app:entryValues="@array/settings_server_type_value_list"
        app:defaultValue="@string/settings_server_type_default" />

    <EditTextPreference
        app:key="@string/settings_key_ipa_src"
        app:title="@string/settings_ip_address_src_title"
        app:summary="@string/settings_ip_address_src_description"
        app:defaultValue="@string/settings_ipa_src_default" />

    <EditTextPreference
        app:key="@string/settings_key_ipp_src"
        app:title="@string/settings_ip_port_src_title"
        app:summary="@string/settings_ip_port_src_description"
        app:defaultValue="@string/settings_ipp_src_default" />

    <EditTextPreference
        app:key="@string/settings_key_ipa_dst"
        app:title="@string/settings_ip_address_dst_title"
        app:summary="@string/settings_ip_address_dst_description"
        app:defaultValue="@string/settings_ipa_dst_default" />

    <EditTextPreference
        app:key="@string/settings_key_ipp_dst"
        app:title="@string/settings_ip_port_dst_title"
        app:summary="@string/settings_ip_port_dst_description"
        app:defaultValue="@string/settings_ipp_dst_default" />

    <EditTextPreference
        app:key="@string/settings_key_sync_interval"
        app:title="@string/settings_sync_interval_title"
        app:summary="@string/settings_sync_interval_description"
        app:defaultValue="@string/settings_sync_interval_default" />

    <CheckBoxPreference
        app:key="@string/settings_key_generate_nmea"
        app:title="@string/settings_generate_nmea_title"
        app:summary="@string/settings_generate_nmea_description" />

    <CheckBoxPreference
        app:key="@string/settings_key_relay_nmea"
        app:title="@string/settings_relay_nmea_title"
        app:summary="@string/settings_relay_nmea_description" />

</PreferenceScreen>